[package]
name = "gob_archive"
description = "Rust-written CLI archiver and un-archiver for the LucasArts GOB archive format"
repository = "https://github.com/CubesAndCubes/gob-archive"
documentation = "https://github.com/CubesAndCubes/gob-archive"
license = "MIT OR Apache-2.0"
categories = ["encoding"]
keywords = ["cli", "archive", "gob", "lucasarts"]
readme = "README.md"
version = "1.0.2"
edition = "2021"

[[bin]]
name = "gob_archive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gob_rs = "1.2.0"
